# intro_to_python_training

./: .gitignore  main.ipynb  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb
essential_notebooks/: 01_arrays.ipynb  02_dataframes.ipynb  02_dataframes.py  02_variables_data_types_scope.ipynb  03_data_structures.ipynb  06_iterations_and_comprehensions.ipynb  07_functions_classes_and_objects.ipynb  07_strings_and_ranges2.ipynb  09_errors_and_exceptions.ipynb  09_user_inputs_and_file_handling.ipynb  11_basic_visualizations.ipynb  99.1_additional_exercises_01.py  99.1_additional_exercises_dataframes.py  99_exercises.ipynb  99_exercises2.ipynb  99_exercises3.ipynb  99_exercises4.ipynb
essential_notebooks/.ipynb_checkpoints/: 01_arrays-checkpoint.ipynb  02_dataframes-checkpoint.ipynb  02_variables_data_types_scope-checkpoint.ipynb  03_data_structures-checkpoint.ipynb  04_strings_and_ranges-checkpoint.ipynb  05_loops_and_conditionals-checkpoint.ipynb  06_iterations_and_comprehensions-checkpoint.ipynb  07_functions_classes_and_objects-checkpoint.ipynb  08_user_inputs_and_file_handling-checkpoint.ipynb  09_user_inputs_and_file_handling-checkpoint.ipynb  10_lambda_map_filter-checkpoint.ipynb  11_basic_visualizations-checkpoint.ipynb  99_exercises-checkpoint.ipynb  99_exercises2-checkpoint.ipynb  99_exercises3-checkpoint.ipynb  barangay_farms-checkpoint.txt
essential_notebooks/__marimo__/session/: 02_dataframes.py.json  99.1_additional_exercises_01.py.json
project/: main.ipynb
project/.ipynb_checkpoints/: main-checkpoint.ipynb
(+2 files in other folders)
