[project]
name = "python-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.3",
    "geopandas>=1.1.2",
    "jupyterlab>=4.5.1",
    "marimo>=0.19.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "polars>=1.37.0",
    "pyproj>=3.7.1",
    "rasterio>=1.4.4",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "typeguard>=4.4.4",
]
